refactor: null/lineWidth guards, EnumSet lookup, explicit imports, inline wrappers, dead-code removal