@@ -16,7 +16,6 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -176,7 +175,7 @@ public final class Cli {
                     if (a.startsWith("--")) {
                         throw new IllegalArgumentException("unknown flag: " + a);
                     }
-                    files.add(Paths.get(a));
+                    files.add(Path.of(a));
                 }
             }
         }
